прописаны тесты завершение работы над системой написание README